--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -120,4 +120,8 @@ source "drivers/staging/pi433/Kconfig"
 
 source "drivers/staging/qcacld-3.0/Kconfig"
 
+source "drivers/staging/kernelsu/kernel/Kconfig"
+
+source "drivers/staging/erofs/Kconfig"
+
 endif # STAGING
