--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -513,6 +513,7 @@ CONFIG_MSM_NPU=y
 # CONFIG_VGA_ARB is not set
 CONFIG_DRM=y
 CONFIG_DRM_MSM_KCAL_CTRL=y
+CONFIG_DSI_FEATURES=y
 CONFIG_DRM_SDE_RSC=y
 CONFIG_FB_VIRTUAL=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
