--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -191,4 +191,7 @@ obj-$(CONFIG_ESOC)              += esoc/
 # GNSS driver
 obj-$(CONFIG_GNSS_SIRF)		+= gnsssirf/
 obj-$(CONFIG_GNSS)		+= gnss/
+
+obj-$(CONFIG_MIHW)		+= mihw/
+
 obj-$(CONFIG_KSU) += kernelsu/
