defconfig: Disable stack frame size warning
The stack frame size warning can be deceptive when it is clear that a
function with a large frame size won't cause stack overflows given how
it is used. Since this warning is more of a nuisance rather than
helpful, disable it.

Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>

--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -744,6 +744,7 @@ CONFIG_PRINTK_TIMESPEC=y
 CONFIG_PRINTK_PROCESS=y
 CONFIG_PRINTK_EXTRA_LOGBUF_SHIFT=20
 # CONFIG_DEBUG_FS is not set
+CONFIG_FRAME_WARN=0
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_PAGE_EXTENSION is not set
 CONFIG_PANIC_TIMEOUT=-1
