defconfig: Enable CASS

--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -782,6 +782,7 @@ CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
 CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP=y
 CONFIG_MIHW=y
 CONFIG_MILLET=y
+CONFIG_SCHED_CASS=y
 CONFIG_NF_CT_PROTO_DCCP=y
 CONFIG_NF_CT_PROTO_UDPLITE=y
 CONFIG_NF_CT_NETLINK_HELPER=y
