--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -72,6 +72,7 @@ CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
 CONFIG_ZPOOL=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
+CONFIG_VMSTAT_INTERVAL=20
 CONFIG_SECCOMP=y
 CONFIG_OKL4_GUEST=y
 CONFIG_ARMV8_DEPRECATED=y
