--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -17,13 +17,15 @@ CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_NOCB_CPU=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
-CONFIG_IKHEADERS=y
-CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
+# CONFIG_IKHEADERS is not set
+CONFIG_LOG_BUF_SHIFT=20
+CONFIG_LOG_CPU_MAX_BUF_SHIFT=0
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_SWAP=y
 CONFIG_MEMCG_SWAP_ENABLED=y
 CONFIG_BLK_CGROUP=y
+CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
@@ -43,9 +45,11 @@ CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
-CONFIG_SLAB_FREELIST_RANDOM=y
-CONFIG_SLAB_FREELIST_HARDENED=y
-CONFIG_PROFILING=y
+# CONFIG_SLUB_CPU_PARTIAL IS not set
+# CONFIG_PROFILING is not set
+CONFIG_PERF_EVENTS=y
+# CONFIG_VM_EVENT_COUNTERS is not set
+# CONFIG_VMAP_STACK is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_REFCOUNT_FULL=y
 CONFIG_MODULE_SIG=y
@@ -118,7 +122,7 @@ CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
-CONFIG_IP_ROUTE_VERBOSE=y
+# CONFIG_IP_ROUTE_VERBOSE is not set
 CONFIG_IP_PNP=y
 CONFIG_IP_PNP_DHCP=y
 CONFIG_NET_IPGRE_DEMUX=y
@@ -263,8 +267,6 @@ CONFIG_NET_ACT_SKBEDIT=y
 CONFIG_NET_SWITCHDEV=y
 CONFIG_QRTR=y
 CONFIG_QRTR_SMD=y
-CONFIG_QRTR_MHI=y
-CONFIG_QRTR_FIFO=y
 CONFIG_BPF_JIT=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_BT=y
@@ -278,10 +280,6 @@ CONFIG_NFC_NQ=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_CMA=y
-CONFIG_MHI_BUS=y
-CONFIG_MHI_QCOM=y
-CONFIG_MHI_NETDEV=y
-CONFIG_MHI_UCI=y
 CONFIG_ZRAM=y
 CONFIG_ZRAM_DEF_COMP_LZ4=y
 CONFIG_ZRAM_WRITEBACK=y
@@ -299,8 +297,7 @@ CONFIG_SCSI=y
 CONFIG_SIMTRAY_STATUS=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
-CONFIG_CHR_DEV_SCH=y
-CONFIG_SCSI_CONSTANTS=y
+# CONFIG_SCSI_CONSTANTS is not set
 CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
@@ -448,12 +445,12 @@ CONFIG_REGULATOR_RPMH=y
 CONFIG_REGULATOR_STUB=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
-CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
+# CONFIG_MEDIA_DIGITAL_TV_SUPPORT is not set
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_VIDEO_ADV_DEBUG=y
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
-CONFIG_MEDIA_USB_SUPPORT=y
+# CONFIG_MEDIA_USB_SUPPORT is not set
 CONFIG_USB_VIDEO_CLASS=y
 CONFIG_USB_GSPCA=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
@@ -583,12 +580,9 @@ CONFIG_IPA3=y
 CONFIG_IPA_WDI_UNIFIED_API=y
 CONFIG_RMNET_IPA3=y
 CONFIG_RNDIS_IPA=y
-CONFIG_IPA3_MHI_PROXY=y
-CONFIG_IPA3_MHI_PRIME_MANAGER=y
-CONFIG_IPA_UT=y
-CONFIG_MSM_11AD=y
 CONFIG_SEEMP_CORE=y
-CONFIG_IPA3_REGDUMP=y
+# CONFIG_IPA3_REGDUMP is not set
+# CONFIG_COMMON_CLK_XGENE is not set
 CONFIG_QCOM_MDSS_PLL=y
 CONFIG_SPMI_PMIC_CLKDIV=y
 CONFIG_MSM_CLK_AOP_QMP=y
@@ -627,9 +621,8 @@ CONFIG_QCOM_QMI_RMNET=y
 CONFIG_QCOM_QMI_DFC=y
 CONFIG_QCOM_QMI_POWER_COLLAPSE=y
 CONFIG_QCOM_SMEM=y
-CONFIG_QCOM_MEMORY_DUMP_V2=y
-CONFIG_QCOM_WATCHDOG_V2=y
-CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
+# CONFIG_QCOM_MEMORY_DUMP_V2 is not set
+# CONFIG_QCOM_WATCHDOG_V2 is not set
 CONFIG_QCOM_SMP2P=y
 CONFIG_QPNP_PBS=y
 CONFIG_MSM_SERVICE_LOCATOR=y
@@ -642,13 +635,13 @@ CONFIG_SETUP_SSR_NOTIF_TIMEOUTS=y
 CONFIG_SSR_SYSMON_NOTIF_TIMEOUT=20000
 CONFIG_SSR_SUBSYS_NOTIF_TIMEOUT=20000
 CONFIG_PANIC_ON_SSR_NOTIF_TIMEOUT=y
-CONFIG_MSM_BOOT_STATS=y
-CONFIG_QCOM_DCC_V2=y
+# CONFIG_MSM_BOOT_STATS is not set
+# CONFIG_QCOM_DCC_V2 is not set
 CONFIG_QCOM_SECURE_BUFFER=y
 CONFIG_ICNSS=y
 CONFIG_ICNSS_QMI=y
 CONFIG_QCOM_EUD=y
-CONFIG_QCOM_MINIDUMP=y
+# CONFIG_MINIDUMP is not set
 CONFIG_QCOM_BUS_SCALING=y
 CONFIG_QCOM_BUS_CONFIG_RPMH=y
 CONFIG_QCOM_COMMAND_DB=y
@@ -659,18 +652,14 @@ CONFIG_QTI_RPMH_API=y
 CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_QCOM_GLINK=y
 CONFIG_QCOM_GLINK_PKT=y
-CONFIG_QCOM_QDSS_BRIDGE=y
-CONFIG_QTI_RPM_STATS_LOG=y
 CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QCOM_SMCINVOKE=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_PM=y
 CONFIG_MSM_QBT1000=y
 CONFIG_QCOM_FSA4480_I2C=y
-CONFIG_MEM_SHARE_QMI_SERVICE=y
-CONFIG_RMNET_CTL=y
-CONFIG_MSM_PERFORMANCE=y
-CONFIG_QMP_DEBUGFS_CLIENT=y
+# CONFIG_MEM_SHARE_QMI_SERVICE is not set
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
 CONFIG_QCOM_CDSP_RM=y
 CONFIG_QCOM_AOP_DDR_MESSAGING=y
@@ -717,8 +706,10 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_ENCRYPTION=y
 CONFIG_EROFS_FS=y
 CONFIG_F2FS_FS=y
+# CONFIG_F2FS_STAT_FS is not set
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
+# CONFIG_F2FS_IOSTAT is not set
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 CONFIG_FRAME_WARN=4096
 CONFIG_FS_VERITY=y
@@ -731,6 +722,7 @@ CONFIG_OVERLAY_FS=y
 CONFIG_INCREMENTAL_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
+CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_FS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_PSTORE=y
@@ -753,32 +745,21 @@ CONFIG_PRINTK_EXTRA_LOGBUF_SHIFT=20
 CONFIG_DEBUG_INFO=y
 CONFIG_PAGE_OWNER=y
 CONFIG_MAGIC_SYSRQ=y
+# CONFIG_PAGE_EXTENSION is not set
 CONFIG_PANIC_TIMEOUT=-1
-CONFIG_SCHEDSTATS=y
+# CONFIG_SCHED_DEBUG is not set
 # CONFIG_DEBUG_PREEMPT is not set
-CONFIG_DEBUG_LIST=y
-CONFIG_IPC_LOGGING=y
-CONFIG_DEBUG_ALIGN_RODATA=y
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
-CONFIG_CORESIGHT_DYNAMIC_REPLICATOR=y
-CONFIG_CORESIGHT_STM=y
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_TPDA=y
-CONFIG_CORESIGHT_TPDM=y
-CONFIG_CORESIGHT_HWEVENT=y
-CONFIG_CORESIGHT_DUMMY=y
-CONFIG_CORESIGHT_REMOTE_ETM=y
-CONFIG_CORESIGHT_REMOTE_ETM_DEFAULT_ENABLE=0
-CONFIG_CORESIGHT_TGU=y
-CONFIG_CORESIGHT_EVENT=y
+# CONFIG_BUG_ON_DATA_CORRUPTION is not set
+CONFIG_DISABLE_TRACE_PRINTK=y
+# CONFIG_IPC_LOGGING is not set
+CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 CONFIG_TRUSTONIC_TEE=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_STATIC_USERMODEHELPER_PATH=""
 CONFIG_SECURITY_SELINUX=y
-CONFIG_SECURITY_SMACK=y
+CONFIG_SECURITY_NETWORK=y
 CONFIG_TRUSTONIC_TEE=y
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_XCBC=y
@@ -813,6 +794,8 @@ CONFIG_RMNET_PERF=y
 CONFIG_RMNET_SHS=y
 CONFIG_MIHW=y
 CONFIG_MILLET=y
+CONFIG_SCHED_CASS=y
+# CONFIG_COREDUMP is not set
 CONFIG_NF_CT_PROTO_DCCP=y
 CONFIG_NF_CT_PROTO_UDPLITE=y
 CONFIG_NF_CT_NETLINK_HELPER=y
