--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -1,5 +1,5 @@
 CONFIG_HOTPLUG_SIZE_BITS=29
-CONFIG_LOCALVERSION="-openela"
+CONFIG_LOCALVERSION="-Marisa"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -21,6 +21,8 @@ CONFIG_IKHEADERS=y
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
+CONFIG_SWAP=y
+CONFIG_MEMCG_SWAP_ENABLED=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
@@ -36,20 +38,19 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
-CONFIG_KALLSYMS_ALL=y
 CONFIG_BPF_SYSCALL=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_PROFILING=y
-CONFIG_KPROBES=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_REFCOUNT_FULL=y
-CONFIG_MODULES=y
-CONFIG_MODULE_UNLOAD=y
-CONFIG_MODVERSIONS=y
+CONFIG_MODULE_SIG=y
+CONFIG_MODULE_SIG_FORCE=y
+CONFIG_MODULE_SIG_SHA512=y
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
 CONFIG_PARTITION_ADVANCED=y
@@ -62,13 +63,14 @@ CONFIG_PCI_MSM_MSI=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
-CONFIG_HZ_100=y
+CONFIG_HZ_300=y
 CONFIG_MEMORY_HOTPLUG=y
 CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE=y
 CONFIG_MEMORY_HOTPLUG_MOVABLE_NODE=y
 CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
+CONFIG_ZPOOL=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_SECCOMP=y
 CONFIG_OKL4_GUEST=y
@@ -82,25 +84,28 @@ CONFIG_RANDOMIZE_BASE=y
 CONFIG_CMDLINE="cgroup_disable=pressure"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_EFI is not set
-CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
-CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
+# CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL is not set
 CONFIG_KRYO_PMU_WORKAROUND=y
-CONFIG_BUILD_ARM64_DT_OVERLAY=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
+CONFIG_COMPAT_VDSO=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_IDLE=y
+# CONFIG_CPU_IDLE_GOV_MENU is not set
+CONFIG_CPU_IDLE_GOV_TEO=y
 CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_TIMES=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+# CONFIG_CPU_FREQ_TIMES is not set
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_BOOST=y
+CONFIG_CGROUPS=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_NET=y
 CONFIG_PACKET=y
@@ -124,6 +129,10 @@ CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 CONFIG_INET_UDP_DIAG=y
 CONFIG_INET_DIAG_DESTROY=y
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BBR=y
+CONFIG_TCP_CONG_BIC=y
+CONFIG_DEFAULT_BBR=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
@@ -232,7 +241,10 @@ CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_HTB=y
 CONFIG_NET_SCH_PRIO=y
 CONFIG_NET_SCH_MULTIQ=y
+CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_INGRESS=y
+CONFIG_NET_SCH_DEFAULT=y
+CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_NET_CLS_FW=y
 CONFIG_NET_CLS_U32=y
 CONFIG_CLS_U32_MARK=y
@@ -253,6 +265,7 @@ CONFIG_QRTR=y
 CONFIG_QRTR_SMD=y
 CONFIG_QRTR_MHI=y
 CONFIG_QRTR_FIFO=y
+CONFIG_BPF_JIT=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_BT=y
 CONFIG_MSM_BT_POWER=y
@@ -270,6 +283,9 @@ CONFIG_MHI_QCOM=y
 CONFIG_MHI_NETDEV=y
 CONFIG_MHI_UCI=y
 CONFIG_ZRAM=y
+CONFIG_ZRAM_DEF_COMP_LZ4=y
+CONFIG_ZRAM_WRITEBACK=y
+CONFIG_MIUI_ZRAM_MEMORY_TRACKING=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_BLK_DEV_RAM=y
@@ -280,6 +296,7 @@ CONFIG_UID_SYS_STATS=y
 CONFIG_MEMORY_STATE_TIME=y
 CONFIG_OKL4_USER_VIRQ=y
 CONFIG_SCSI=y
+CONFIG_SIMTRAY_STATUS=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
 CONFIG_CHR_DEV_SCH=y
@@ -337,6 +354,7 @@ CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
 CONFIG_TOUCHSCREEN_ST_FTS_V521=y
 CONFIG_FTS_FOD_AREA_REPORT=y
 CONFIG_TOUCHSCREEN_ST_DEBUG_FS=y
+CONFIG_TOUCHSCREEN_NT36XXX=y
 CONFIG_SECURE_TOUCH=y
 CONFIG_I2C_BY_DMA=y
 CONFIG_INPUT_MISC=y
@@ -344,9 +362,16 @@ CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_QTI_HAPTICS=y
 CONFIG_INPUT_UINPUT=y
+CONFIG_LIRC=y
+CONFIG_RC_DEVICES=y
 CONFIG_AW8697_XM_HAPTIC=y
+CONFIG_IR_SPI=y
+CONFIG_VCM_AK7374=y
 CONFIG_INPUT_FINGERPRINT=y
+CONFIG_QCA_CLD_WLAN=y
+CONFIG_MACH_XIAOMI_CRUX=y
 CONFIG_FINGERPRINT_GOODIX_TA=y
+CONFIG_FINGERPRINT_GOODIX_TA_CRUX=y
 # CONFIG_SERIO_SERPORT is not set
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
@@ -379,15 +404,22 @@ CONFIG_POWER_RESET_QCOM=y
 CONFIG_QCOM_DLOAD_MODE=y
 CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
+#CONFIG_QPNP_FG_GEN4=y
+CONFIG_FUEL_GAUGE_BQ27Z561=y
+#CONFIG_SMB1355_SLAVE_CHARGER=y
 CONFIG_QPNP_SMB5=y
+CONFIG_QPNP_SMB5_CRUX=y
 CONFIG_QPNP_QNOVO5=y
 CONFIG_SMB1390_CHARGE_PUMP_PSY=y
-CONFIG_IDT_P9220=y
-CONFIG_LN8282=y
-CONFIG_HALO_7221=y
-CONFIG_RX1619_TRIM=y
+CONFIG_SMB1390_CHARGE_PUMP_PSY_CRUX=y
 CONFIG_RX1619=y
-CONFIG_FUEL_GAUGE_BQ27Z561=y
+CONFIG_RX1619_TRIM=y
+CONFIG_LN8282=y
+CONFIG_IDT_P9220=y
+CONFIG_IDT_P9220_CRUX=y
+CONFIG_HALO_7221=y
+CONFIG_MACH_XIAOMI=y
+CONFIG_MACH_XIAOMI_SM8150=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
@@ -414,10 +446,6 @@ CONFIG_REGULATOR_QPNP_LCDB=y
 CONFIG_REGULATOR_REFGEN=y
 CONFIG_REGULATOR_RPMH=y
 CONFIG_REGULATOR_STUB=y
-CONFIG_LIRC=y
-CONFIG_RC_DEVICES=y
-CONFIG_IR_SPI=y
-CONFIG_IR_MSM_GENI=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
@@ -430,20 +458,23 @@ CONFIG_USB_VIDEO_CLASS=y
 CONFIG_USB_GSPCA=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_SPECTRA_CAMERA=y
-CONFIG_VCM_AK7374=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
 CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
 CONFIG_MSM_NPU=y
-CONFIG_DVB_MPQ=y
-CONFIG_DVB_MPQ_DEMUX=y
-CONFIG_DVB_MPQ_TSPP1=y
+# CONFIG_DVB_MPQ is not set
+# CONFIG_DVB_MPQ_DEMUX is not set
+# CONFIG_DVB_MPQ_TSPP1 is not set
 CONFIG_TSPP=y
 CONFIG_DRM=y
+CONFIG_DRM_MSM_KCAL_CTRL=y
 CONFIG_DRM_MSM_REGISTER_LOGGING=y
 CONFIG_DRM_SDE_EVTLOG_DEBUG=y
 CONFIG_DRM_SDE_RSC=y
+CONFIG_FB_VIRTUAL=y
+CONFIG_BACKLIGHT_LCD_SUPPORT=y
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_DRM_LT_LT9611=y
 CONFIG_FB_ARMCLCD=y
 CONFIG_LCD_CLASS_DEVICE=y
@@ -493,6 +524,7 @@ CONFIG_DUAL_ROLE_USB_INTF=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_VBUS_DRAW=900
 CONFIG_USB_CONFIGFS=y
+CONFIG_USB_CONFIGFS_ACM=y
 CONFIG_USB_CONFIGFS_NCM=y
 CONFIG_USB_CONFIGFS_RNDIS=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
@@ -517,6 +549,7 @@ CONFIG_MMC_PERF_PROFILING=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 CONFIG_MMC_TEST=y
+CONFIG_MMC_RING_BUFFER=y
 CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_SDHCI=y
@@ -540,9 +573,7 @@ CONFIG_UIO=y
 CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ION=y
-CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCOM_GENI_SE=y
 CONFIG_QPNP_REVID=y
 CONFIG_SPS=y
@@ -651,6 +682,7 @@ CONFIG_DEVFREQ_GOV_PASSIVE=y
 CONFIG_QCOM_BIMC_BWMON=y
 CONFIG_ARM_MEMLAT_MON=y
 CONFIG_QCOMCCI_HWMON=y
+CONFIG_HWMON=y
 CONFIG_QCOM_M4M_HWMON=y
 CONFIG_DEVFREQ_GOV_QCOM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_QCOM_CACHE_HWMON=y
@@ -683,10 +715,12 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_ENCRYPTION=y
+CONFIG_EROFS_FS=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
+CONFIG_FRAME_WARN=4096
 CONFIG_FS_VERITY=y
 CONFIG_FS_VERITY_BUILTIN_SIGNATURES=y
 CONFIG_QUOTA=y
@@ -697,13 +731,25 @@ CONFIG_OVERLAY_FS=y
 CONFIG_INCREMENTAL_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
+CONFIG_EXFAT_FS=y
 CONFIG_TMPFS_POSIX_ACL=y
+CONFIG_PSTORE=y
+CONFIG_PSTORE_CONSOLE=y
+CONFIG_PSTORE_PMSG=y
+CONFIG_PSTORE_RAM=y
+CONFIG_PSTORE_ZLIB_COMPRESS=y
 CONFIG_ECRYPT_FS=y
 CONFIG_ECRYPT_FS_MESSAGING=y
 CONFIG_SDCARD_FS=y
+CONFIG_NTFS_FS=y
+CONFIG_NTFS_RW=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
+CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
+CONFIG_PRINTK_TIMESPEC=y
+CONFIG_PRINTK_PROCESS=y
+CONFIG_PRINTK_EXTRA_LOGBUF_SHIFT=20
 CONFIG_DEBUG_INFO=y
 CONFIG_PAGE_OWNER=y
 CONFIG_MAGIC_SYSRQ=y
@@ -727,14 +773,23 @@ CONFIG_CORESIGHT_REMOTE_ETM_DEFAULT_ENABLE=0
 CONFIG_CORESIGHT_TGU=y
 CONFIG_CORESIGHT_EVENT=y
 CONFIG_SECURITY=y
+CONFIG_TRUSTONIC_TEE=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_STATIC_USERMODEHELPER_PATH=""
 CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SMACK=y
+CONFIG_TRUSTONIC_TEE=y
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_TWOFISH=y
+CONFIG_CRYPTO_LZ4=y
+CONFIG_CRYPTO_ZSTD=y
+CONFIG_CRYPTO=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_ZSTD_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+CONFIG_ZSTD_DECOMPRESS=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
@@ -748,6 +803,31 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_STACK_HASH_ORDER_SHIFT=12
-CONFIG_MACH_XIAOMI_CRUX=y
+CONFIG_BUILD_ARM64_DT_OVERLAY=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_IMG_GZ_DTB=y
+CONFIG_BUILD_ARM64_APPENDED_KERNEL_IMAGE_NAME="Image.gz-dtb"
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
+CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP=y
 CONFIG_RMNET_PERF=y
 CONFIG_RMNET_SHS=y
+CONFIG_MIHW=y
+CONFIG_MILLET=y
+CONFIG_NF_CT_PROTO_DCCP=y
+CONFIG_NF_CT_PROTO_UDPLITE=y
+CONFIG_NF_CT_NETLINK_HELPER=y
+CONFIG_NF_CT_PROTO_SCTP=y
+CONFIG_NETFILTER_NETLINK_QUEUE=y
+CONFIG_NETFILTER_NETLINK_GLUE_CT=y
+CONFIG_NETFILTER_XT_TARGET_CT=y
+CONFIG_NETFILTER_TPROXY=y
+CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
+CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
+CONFIG_KALLSYMS=y
+CONFIG_KALLSYMS_ALL=n
+CONFIG_HAVE_KPROBES=y
+CONFIG_DEBUG_KERNEL=y
+CONFIG_DEBUG_FS=y
+CONFIG_FRAME_POINTER=y
+CONFIG_SUSPEND=y
+CONFIG_SUSPEND_FREEZER=y
