--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -888,7 +888,7 @@ config INPUT_HISI_POWERKEY
 
 	  To compile this driver as a module, choose M here: the
 	  module will be called hisi_powerkey.
-
+source "drivers/input/misc/aw8697_haptic/Kconfig"
 source "drivers/input/misc/aw8697_haptic_xm/Kconfig"
 
 endif
