--- a/arch/arm64/configs/ceshi_defconfig
+++ b/arch/arm64/configs/ceshi_defconfig
@@ -364,8 +364,7 @@ CONFIG_INPUT_QTI_HAPTICS=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_LIRC=y
 CONFIG_RC_DEVICES=y
-CONFIG_AW8697_XM_HAPTIC=n
-CONFIG_INPUT_AW8697_HAPTIC=y
+CONFIG_AW8697_XM_HAPTIC=y
 CONFIG_IR_SPI=y
 CONFIG_VCM_AK7374=y
 CONFIG_INPUT_FINGERPRINT=y
@@ -832,3 +831,8 @@ CONFIG_DEBUG_FS=y
 CONFIG_FRAME_POINTER=y
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
+CONFIG_MODULES=y
+CONFIG_MODULE_UNLOAD=y
+CONFIG_MODVERSIONS=y
+CONFIG_LZ4HC_COMPRESS=y
+CONFIG_KALLSYMS_DEBUG=y
