--- a/drivers/input/misc/aw8697_haptic_xm/Makefile
+++ b/drivers/input/misc/aw8697_haptic_xm/Makefile
@@ -1,3 +1,2 @@
-aw8697-haptic-objs = ringbuffer.o aw8697.o
-
 obj-$(CONFIG_AW8697_XM_HAPTIC)	+= aw8697.o
+obj-$(CONFIG_AW8697_XM_HAPTIC)	+= ringbuffer.o
