--- a/arch/arm64/configs/ceshi_defconfig
+++ b/arch/arm64/configs/ceshi_defconfig
@@ -835,3 +835,7 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_LZ4HC_COMPRESS=y
 CONFIG_KALLSYMS_DEBUG=y
+CONFIG_MIGT=y
+CONFIG_MI_RECLAIM=y
+CONFIG_KALLSYMS_BASE_RELATIVE=y
+CONFIG_AW8697_XM_HAPTIC=y
