--- a/arch/arm64/configs/ceshi_defconfig
+++ b/arch/arm64/configs/ceshi_defconfig
@@ -839,3 +839,5 @@ CONFIG_MIGT=y
 CONFIG_MI_RECLAIM=y
 CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_AW8697_XM_HAPTIC=y
+CONFIG_OVERLAY_FS_INDEX=y
+CONFIG_OVERLAY_FS_REDIRECT_DIR=y
