--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -824,4 +824,10 @@ CONFIG_NETFILTER_TPROXY=y
 CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
 CONFIG_KALLSYMS=y
-CONFIG_KALLSYMS_ALL=n
+CONFIG_KALLSYMS_ALL=y
+CONFIG_HAVE_KPROBES=y
+CONFIG_DEBUG_KERNEL=y
+CONFIG_DEBUG_FS=y
+CONFIG_FRAME_POINTER=y
+CONFIG_SUSPEND=y
+CONFIG_SUSPEND_FREEZER=y
