--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -831,3 +831,5 @@ CONFIG_DEBUG_FS=y
 CONFIG_FRAME_POINTER=y
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
+# CONFIG_KSU_MANUAL_HOOK is not set
+CONFIG_KPROBES=y
