--- a/drivers/media/platform/msm/camera/cam_req_mgr/Makefile
+++ b/drivers/media/platform/msm/camera/cam_req_mgr/Makefile
@@ -10,3 +10,4 @@ obj-$(CONFIG_SPECTRA_CAMERA) += cam_req_mgr_core.o\
 				cam_mem_mgr.o \
 				cam_req_mgr_timer.o \
 				cam_req_mgr_debug.o
+obj-y += cam_req_mgr_trace.o
