--- a/drivers/block/zram/Kconfig
+++ b/drivers/block/zram/Kconfig
@@ -2,8 +2,7 @@
 config ZRAM
 	tristate "Compressed RAM block device support"
 	depends on BLOCK && SYSFS && ZSMALLOC && CRYPTO
-	depends on CRYPTO_LZO || CRYPTO_ZSTD || CRYPTO_LZ4 || CRYPTO_LZ4HC || CRYPTO_842 || CRYPTO_LZ4K || CRYPTO_LZ4KD || CRYPTO_DEFLATE
-	default n
+	depends on CRYPTO_LZO || CRYPTO_ZSTD || CRYPTO_LZ4 || CRYPTO_LZ4HC || CRYPTO_842 || CRYPTO_LZ4K || CRYPTO_LZ4K_OPLUS || CRYPTO_LZ4KD || CRYPTO_DEFLATE
 	help
 	  Creates virtual block devices called /dev/zramX (X = 0, 1, ...).
 	  Pages written to these disks are compressed and stored in memory
@@ -47,6 +46,10 @@ config ZRAM_DEF_COMP_842
 config ZRAM_DEF_COMP_LZ4K
 	bool "lz4k"
 	depends on CRYPTO_LZ4K
+	
+config ZRAM_DEF_COMP_LZ4K_OPLUS
+	bool "lz4k"
+	depends on CRYPTO_LZ4K_OPLUS
 
 config ZRAM_DEF_COMP_LZ4KD
 	bool "lz4kd"
@@ -67,6 +70,7 @@ config ZRAM_DEF_COMP
 	default "lz4hc" if ZRAM_DEF_COMP_LZ4HC
 	default "842" if ZRAM_DEF_COMP_842
 	default "lz4k" if ZRAM_DEF_COMP_LZ4K
+	default "lz4k_oplus" if ZRAM_DEF_COMP_LZ4K_OPLUS
 	default "lz4kd" if ZRAM_DEF_COMP_LZ4KD
 	default "deflate" if ZRAM_DEF_COMP_DEFLATE
 
