arm64: update crux_defconfig to enable LRU generation features and clean up redundant entries

--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -78,6 +78,8 @@ CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
 CONFIG_VMSTAT_INTERVAL=20
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
 CONFIG_ZPOOL=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_SECCOMP=y
@@ -516,7 +518,6 @@ CONFIG_DRM_SDE_RSC=y
 CONFIG_FB_VIRTUAL=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
-CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 # CONFIG_BACKLIGHT_GENERIC is not set
 CONFIG_SOUND=y
@@ -710,7 +711,6 @@ CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_F2FS_IOSTAT is not set
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
-CONFIG_FRAME_WARN=4096
 CONFIG_FS_VERITY=y
 CONFIG_FS_VERITY_BUILTIN_SIGNATURES=y
 CONFIG_QUOTA=y
@@ -723,7 +723,6 @@ CONFIG_OVERLAY_FS_INDEX=y
 CONFIG_INCREMENTAL_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
-CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_FS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_PSTORE=y
@@ -809,7 +808,6 @@ CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
 CONFIG_KALLSYMS=y
 CONFIG_KALLSYMS_ALL=y
 CONFIG_DEBUG_KERNEL=y
-CONFIG_DEBUG_FS=y
 CONFIG_FRAME_POINTER=y
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
