--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -3,7 +3,6 @@ CONFIG_LOCALVERSION="-Marisa"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
-# CONFIG_AUDITSYSCALL is not set
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SCHED_WALT=y
@@ -113,7 +112,7 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_BOOST=y
-CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
@@ -136,9 +135,9 @@ CONFIG_INET_IPCOMP=y
 CONFIG_INET_UDP_DIAG=y
 CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_TCP_CONG_BBR=y
 CONFIG_TCP_CONG_BIC=y
+CONFIG_DEFAULT_BBR=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_IPV6_ROUTE_INFO=y
@@ -285,7 +284,7 @@ CONFIG_ZRAM_DEF_COMP_LZ4=y
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_MIUI_ZRAM_MEMORY_TRACKING=y
 CONFIG_BLK_DEV_LOOP=y
-CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
+CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
 # CONFIG_BLK_DEV_RAM is not set
 CONFIG_HDCP_QSEECOM=y
 CONFIG_QSEECOM=y
