--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -75,6 +75,7 @@ CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
 CONFIG_VMSTAT_INTERVAL=20
+CONFIG_PROCESS_RECLAIM=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 CONFIG_ZPOOL=y
