--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -739,7 +739,6 @@ CONFIG_PRINTK_TIME=y
 CONFIG_PRINTK_TIMESPEC=y
 CONFIG_PRINTK_PROCESS=y
 CONFIG_PRINTK_EXTRA_LOGBUF_SHIFT=20
-# CONFIG_DEBUG_FS is not set
 CONFIG_FRAME_WARN=0
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_PAGE_EXTENSION is not set
@@ -808,6 +807,7 @@ CONFIG_DEBUG_KERNEL=y
 CONFIG_FRAME_POINTER=y
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
+CONFIG_DEBUG_FS=y
 # CONFIG_KSU_MANUAL_HOOK is not set
 CONFIG_KSU=y
 CONFIG_KPM=y
