config: 添加 MSM QDSP6V2 接口支持，注释掉 TFA9874 相关代码

--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -811,6 +811,7 @@ CONFIG_FRAME_POINTER=y
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
 CONFIG_DEBUG_FS=y
+CONFIG_SND_SOC_MSM_QDSP6V2_INTF=y
 # CONFIG_KSU_MANUAL_HOOK is not set
 CONFIG_KSU=y
 CONFIG_KPM=y
