config: Enable CONFIG_KSU_MANUAL_HOOK in crux_defconfig

--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -830,7 +830,7 @@ CONFIG_DEBUG_FS=y
 CONFIG_FRAME_POINTER=y
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
-# CONFIG_KSU_MANUAL_HOOK is not set
+CONFIG_KSU_MANUAL_HOOK=y
 CONFIG_KSU=y
 CONFIG_KPM=y
 CONFIG_HAVE_EBPF_JIT=y
